--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+label {
+  margin-left: 5px;
+}
+
+img {
+  width: 40%;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+h4 {
+  margin: 0;
+padding: 0;
+}
